
2005-08-20  Petr Baudis  <pasky@suse.cz>
	* cert.hh, cert.cc: Publish put_simple_revision_cert() - that
	hints that it is ok to do custom certificates and lets us easily
	do so from the GIT importer.
	* git.cc: Associate a gitcommit cert containing commit and author
	information with each imported commit. This will be especially
	important for incremental imports.

2005-08-18  Petr Baudis  <pasky@suse.cz>
	* Makefile.am, git.hh, git.cc: Initial support for importing from
	GIT repositories to Monotone. This is pretty basic yet, full of
	TODOs, can't do tags nor incremental imports, does not record
	executability of files, and does not attach git certs to the
	imported commits. But it more-or-less successfully imports history
	of the GIT project itself, although it takes its time.
	* commands.cc: git_import command.

2005-08-17  Timothy Brownawell  <tbrownaw@gmail.com>

	* sanity.cc (gasp()): When catching an error from dumping a MM'd
	variable, do not discard output generated prior to the error. This
	way, at least the header line (function name, file, line no.) is
	printed.
	* change_set.cc: write_insane_change_set: new function to write a
	change set without sanity checking it, now used by dump().

2005-08-17  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* unix/process.cc: missing include
	* m4/fexceptions.m4, configure.ac, Makefile.am: remove hardcoded
	-fexceptions in CFLAGS and add it only if compiler doesn't freak
	out.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* work.cc (build_additions): Tweak wording.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc: Add IANA port assignment to the todo list.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* unix/process.cc (make_executable): Open the fd read-only, avoids
	problems with read-only files, and a writeable fd doesn't seem to
	be necessary to change permission bits.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* unix/process.cc (is_executable, make_executable): When reporting